--- a/views/admin/adminHome.hbs
+++ b/views/admin/adminHome.hbs
@@ -253,10 +253,10 @@
               </div> --}}
             </div>
             <ol class="tm-list-group tm-list-group-alternate-color tm-list-group-pad-big">
-              <li class="tm-list-group-item"> <a href="/admin/adminUserManagement">
+              <li class="tm-list-group-item"> <a href="/admin/accounts">
                   Total {{userCount}} users </a>
               </li>
-              <li class="tm-list-group-item"> <a href="/admin/adminOrder">
+              <li class="tm-list-group-item"> <a href="/admin/order">
                   Total {{totalOrdersPlaced}} Orders </a>
               </li>
               
