--- a/views/admin/adminSalesReport.hbs
+++ b/views/admin/adminSalesReport.hbs
@@ -61,3 +61,14 @@
         </div>
     </div>
 
+<script>
+  $(function () {
+    $('#productsTable').DataTable({
+        dom: 'Bfrtip',
+        buttons: [
+            'copy', 'csv', 'excel', 'pdf', 'print'
+        ]
+    });
+  });
+</script>
+
