--- a/views/admin/addProduct.hbs
+++ b/views/admin/addProduct.hbs
@@ -9,7 +9,7 @@
         </div>
         <div class="row tm-edit-product-row">
           <div class="col-xl-6 col-lg-6 col-md-12">
-            <form action="/admin/addProduct" method="post" class="tm-edit-product-form bg-dark text-white p-3"
+            <form id="myForm" action="/admin/addProduct" method="post" class="tm-edit-product-form bg-dark text-white p-3"
               enctype="multipart/form-data">
               <div class="form-group mb-3 ">
                 <label for="name">Product Name
@@ -64,7 +64,7 @@
         </div>
       </div>
       <div class="col-12">
-        <button type="submit" class="btn btn-block text-uppercase btn-info">Add Product Now</button>
+        <button onclick="confirmSubmit(event)"  class="btn btn-block text-uppercase btn-info">Add Product Now</button>
       </div>
       </form>
     </div>
@@ -72,3 +72,40 @@
 </div>
   </div>
 </div>
+
+
+
+<script>
+  function confirmSubmit(event) {
+    event.preventDefault();
+    
+    var form = document.getElementById('myForm');
+    var requiredInputs = form.querySelectorAll('input[required]');
+    var isFormValid = true;
+
+    for (var i = 0; i < requiredInputs.length; i++) {
+      if (requiredInputs[i].value === '') {
+        isFormValid = false;
+        break;
+      }
+    }
+
+    if (isFormValid) {
+      swal({
+        title: "Are you sure you want to submit the form?",
+        icon: "warning",
+        buttons: {
+          cancel: "Cancel",
+          confirm: "OK"
+        },
+      }).then(function (confirmed) {
+        if (confirmed) {
+          form.submit();
+        }
+      });
+    } else {
+      swal("Please fill in all the required fields.", "", "error");
+    }
+  }
+
+</script>
