--- a/views/admin/adminCoupon.hbs
+++ b/views/admin/adminCoupon.hbs
@@ -22,14 +22,14 @@
                                 <th scope="col" class="text-center">Discount</th>
                                 <th scope="col" class="text-center">Expiry Date</th>
                                 <th scope="col" class="text-center">Edit</th>
-                                <th scope="col" class="text-center">Deactivate</th>
+                                <th scope="col" class="text-center">Status</th>
                             </tr>
                         </thead>
                         <tbody>
 
                             {{#each coupons}}
                             <tr>
-                                <td class="tm-product-name">{{@index}}</td>
+                                <td class="tm-product-name">{{increment @index}}</td>
                                 <td class="tm-product-name">{{this.code}}</td>
                                 <td>{{this.discount}}</td>
                                 {{#if this.expired}}
@@ -48,8 +48,7 @@
                                 {{else if this.expired}}
                                 <td><a class="btn btn-danger disabled">expired</a></td>
                                 {{else}}
-                                <td><a class="btn btn-danger" data-toggle="modal"
-                                        data-target="#deactivate{{this._id}}">Deactivate</a></td>
+                                <td><a class=" disabled" onclick="couponDeactivate(event, '{{this._id}}')"> Deactivate</a></td>
                                 {{/if}}
 
                             </tr>
@@ -148,29 +147,7 @@
 
 
 {{!-- deactivate modal --}}
-{{#each coupons}}
-<div class="modal fade" id="deactivate{{this._id}}" tabindex="-1" role="dialog"
-    aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Confirmation</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Do you want to Deactivate {{this.code}} ?
-            </div>
-            <div class="modal-footer">
-                <a href=""><button type="button" class="btn btn-secondary" data-dismiss="modal">cancel</button></a>
-                <a href="/admin/adminDeactivate/{{this._id}}"><button type="button"
-                        class="btn btn-danger">Deactivate</button></a>
-            </div>
-        </div>
-    </div>
-</div>
-{{/each}}
+
 
 
 {{!-- activate Modal --}}
@@ -204,4 +181,25 @@
     $(function () {
         $('#productsTable').DataTable();
     });
+
+function couponDeactivate(event,id) {
+     event.preventDefault()
+  
+     swal({
+       title: "Do you really want to delete the product?",
+       icon: "warning",
+       buttons: {
+         cancel: "Cancel",
+         confirm: "OK"
+        },
+      }).then(function (confirmed) {
+       
+        console.log(event.target.getAttribute("href"),'kkjhjhk');
+        if (confirmed) {
+    
+      window.location.href = "/admin/adminDeactivate/"+id; 
+    }
+  });
+}
+
 </script>
