--- a/views/partials/adminHeader.hbs
+++ b/views/partials/adminHeader.hbs
@@ -17,7 +17,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mx-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="#">Dashboard
+                                    <a class="nav-link active" href="/admin/">Dashboard
                                         <span class="sr-only">(current)</span>
                                     </a>
                                 </li>
@@ -39,21 +39,13 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="/admin/categoryPage">Category</a>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-                                        aria-expanded="false">
-                                        Settings
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="/admin/login">Profile</a>
-                                        <a class="dropdown-item" href="#">Billing</a>
-                                        <a class="dropdown-item" href="#">Customize</a>
-                                    </div>
+                                 <li class="nav-item">
+                                    <a class="nav-link" href="/admin/adminSalesReport">Sales Report</a>
                                 </li>
                             </ul>
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link d-flex" href="/admin/logout">
+                                    <a class="nav-link d-flex" onclick="logout(event)" href="/admin/logout">
                                         <i class="far fa-user mr-2 tm-logout-icon"></i>
                                         <span>Logout</span>
                                     </a>
@@ -80,4 +72,26 @@
   // box.style.visibility = 'hidden';
 }, 3000); // 👈️ time in milliseconds
 
+
+
+
+ function logout(event) {
+     event.preventDefault()
+  
+     swal({
+       title: "Do you really want to logout admin?",
+       icon: "warning",
+       buttons: {
+         cancel: "Cancel",
+         confirm: "OK"
+        },
+      }).then(function (confirmed) {
+       
+        console.log(event.target.getAttribute("href"),'kkjhjhk');
+        if (confirmed) {
+    
+      window.location.href = "/admin/logout"; 
+    }
+  });
+}
 </script>
