--- a/views/user/signUp.hbs
+++ b/views/user/signUp.hbs
@@ -23,7 +23,7 @@
               method="post"
              
             >
-              <div class="col-md-12 form-field p_star">
+              <div class="col-md-12 form-field p_star m-3">
                 <input
                   type="text"
                   class="form-control"
@@ -34,7 +34,7 @@
                   required
                 />
               </div>
-              <div class="col-md-12 form-field p_star">
+              <div class="col-md-12 form-field p_star m-3">
                 <input
                   type="password"
                   class="form-control"
@@ -45,7 +45,7 @@
                   required
                 />
               </div>
-              <div class="col-md-12 form-field p_star">
+              <div class="col-md-12 form-field p_star m-3">
                 <input
                   type="password"
                   class="form-control"
@@ -56,7 +56,7 @@
                   required
                 />
               </div>
-              <div class="col-md-12 form-field p_star">
+              <div class="col-md-12 form-field p_star m-3">
                 <input
                   type="email"
                   class="form-control"
@@ -67,7 +67,7 @@
                   required
                 />
               </div>
-              <div class="col-md-12 form-field p_star">
+              <div class="col-md-12 form-field p_star m-3">
                 <input
                   type="number"
                   class="form-control"
