--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -60,7 +60,7 @@
                                         style="color: black;border-color: rgb(192, 192, 192);">&nbsp;+&nbsp;</span> --}}
                                 </div>
                             </div>
-                            <span id="{{this.product._id}}stocks" style="font-weight: bold;" class="text-danger">{{                                                                                                                                             stract this.product.stock this.quantity}}</span>
+                            <span id="{{this.product._id}}stocks" style="font-weight: bold;" class="text-danger">{{ substract this.product.stock this.quantity}}</span>
 
 								<span class="text-danger" style="font-weight: bold;" id="{{this.product._id}}inStock">Product in Stock</span>
 
