sort and filter price

--- a/views/user/setNewPassword.hbs
+++ b/views/user/setNewPassword.hbs
@@ -79,7 +79,7 @@ background: linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244
         return true;
       }else{
         passwordError.innerHTML = 'required 6-20 character,1 numeric digit, 1 uppercase and 1 lowercase';
-        return true;
+        return false;
       }
     }
     function validateRePassword(){
